fixing timing vertical preview

--- a/preview/vertical.html
+++ b/preview/vertical.html
@@ -357,7 +357,7 @@
         setInterval(() => {
           console.log("Looping...");
           processData(messageData);
-        }, showMessage + 2000);
+        }, showtime + 2000);
       }
 
       function processData(data) {
