fixing broken image medieval scroll horizontal

--- a/medievalscrollh.html
+++ b/medievalscrollh.html
@@ -45,7 +45,7 @@
         overflow: hidden;
         width: 0;
         height: 400px;
-        background: url(../assets/images/material/medieval_scroll_body.png);
+        background: url(./assets/images/material/medieval_scroll_body.png);
         transition: width 1.6s ease-in-out;
         background-size: cover;
         z-index: 1;
@@ -220,12 +220,12 @@
 
           const rollerLeft = document.createElement("img");
           rollerLeft.src =
-            "../assets/images/material/medieval_scroll_handle.png";
+            "./assets/images/material/medieval_scroll_handle.png";
           rollerLeft.className = "roller left";
 
           const rollerRight = document.createElement("img");
           rollerRight.src =
-            "../assets/images/material/medieval_scroll_handle.png";
+            "./assets/images/material/medieval_scroll_handle.png";
           rollerRight.className = "roller right";
 
           const parchment = document.createElement("div");
